// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`User/Modal/RoleForm should match snapshot 1`] = `
<div>
  <form
    class="ant-form ant-form-horizontal"
  >
    <div
      class="ant-row ant-form-item"
    >
      <div
        class="ant-col ant-form-item-label ant-col-xs-24 ant-col-sm-7"
      >
        <label
          class="ant-form-item-required"
          for="roleName"
          title="role.roleForm.roleName"
        >
          role.roleForm.roleName
        </label>
      </div>
      <div
        class="ant-col ant-form-item-control ant-col-xs-24 ant-col-sm-13"
      >
        <div
          class="ant-form-item-control-input"
        >
          <div
            class="ant-form-item-control-input-content"
          >
            <input
              class="ant-input"
              id="roleName"
              placeholder="common.form.placeholder.input"
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="ant-row ant-form-item"
    >
      <div
        class="ant-col ant-form-item-label ant-col-xs-24 ant-col-sm-7"
      >
        <label
          class=""
          for="roleDesc"
          title="role.roleForm.roleDesc"
        >
          role.roleForm.roleDesc
        </label>
      </div>
      <div
        class="ant-col ant-form-item-control ant-col-xs-24 ant-col-sm-13"
      >
        <div
          class="ant-form-item-control-input"
        >
          <div
            class="ant-form-item-control-input-content"
          >
            <textarea
              class="ant-input"
              id="roleDesc"
              placeholder="common.form.placeholder.input"
              rows="3"
              style="resize: none;"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="ant-row ant-form-item"
    >
      <div
        class="ant-col ant-form-item-label ant-col-xs-24 ant-col-sm-7"
      >
        <label
          class=""
          for="operationCodes"
          title="role.roleForm.operationCodes"
        >
          role.roleForm.operationCodes
        </label>
      </div>
      <div
        class="ant-col ant-form-item-control ant-col-xs-24 ant-col-sm-13"
      >
        <div
          class="ant-form-item-control-input"
        >
          <div
            class="ant-form-item-control-input-content"
          >
            <div
              class="ant-select ant-select-multiple ant-select-show-search"
            >
              <div
                class="ant-select-selector"
              >
                <div
                  class="ant-select-selection-overflow"
                >
                  <div
                    class="ant-select-selection-overflow-item ant-select-selection-overflow-item-suffix"
                    style="opacity: 1;"
                  >
                    <div
                      class="ant-select-selection-search"
                      style="width: 0px;"
                    >
                      <input
                        aria-activedescendant="operationCodes_list_0"
                        aria-autocomplete="list"
                        aria-controls="operationCodes_list"
                        aria-haspopup="listbox"
                        aria-owns="operationCodes_list"
                        autocomplete="off"
                        class="ant-select-selection-search-input"
                        id="operationCodes"
                        readonly=""
                        role="combobox"
                        style="opacity: 0;"
                        type="search"
                        unselectable="on"
                        value=""
                      />
                      <span
                        aria-hidden="true"
                        class="ant-select-selection-search-mirror"
                      >
                        
                         
                      </span>
                    </div>
                  </div>
                </div>
                <span
                  class="ant-select-selection-placeholder"
                >
                  common.form.placeholder.select
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </form>
</div>
`;

exports[`User/Modal/RoleForm should match snapshot when isUpdate is truthy 1`] = `
<div>
  <form
    class="ant-form ant-form-horizontal"
  >
    <div
      class="ant-row ant-form-item"
    >
      <div
        class="ant-col ant-form-item-label ant-col-xs-24 ant-col-sm-7"
      >
        <label
          class="ant-form-item-required"
          for="roleName"
          title="role.roleForm.roleName"
        >
          role.roleForm.roleName
        </label>
      </div>
      <div
        class="ant-col ant-form-item-control ant-col-xs-24 ant-col-sm-13"
      >
        <div
          class="ant-form-item-control-input"
        >
          <div
            class="ant-form-item-control-input-content"
          >
            <input
              class="ant-input ant-input-disabled"
              disabled=""
              id="roleName"
              placeholder="common.form.placeholder.input"
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="ant-row ant-form-item"
    >
      <div
        class="ant-col ant-form-item-label ant-col-xs-24 ant-col-sm-7"
      >
        <label
          class=""
          for="roleDesc"
          title="role.roleForm.roleDesc"
        >
          role.roleForm.roleDesc
        </label>
      </div>
      <div
        class="ant-col ant-form-item-control ant-col-xs-24 ant-col-sm-13"
      >
        <div
          class="ant-form-item-control-input"
        >
          <div
            class="ant-form-item-control-input-content"
          >
            <textarea
              class="ant-input"
              id="roleDesc"
              placeholder="common.form.placeholder.input"
              rows="3"
              style="resize: none;"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="ant-row ant-form-item"
    >
      <div
        class="ant-col ant-form-item-label ant-col-xs-24 ant-col-sm-7"
      >
        <label
          class=""
          for="isDisabled"
          title="role.roleForm.isDisabled"
        >
          role.roleForm.isDisabled
        </label>
      </div>
      <div
        class="ant-col ant-form-item-control ant-col-xs-24 ant-col-sm-13"
      >
        <div
          class="ant-form-item-control-input"
        >
          <div
            class="ant-form-item-control-input-content"
          >
            <button
              aria-checked="false"
              class="ant-switch"
              id="isDisabled"
              role="switch"
              type="button"
            >
              <div
                class="ant-switch-handle"
              />
              <span
                class="ant-switch-inner"
              />
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="ant-row ant-form-item"
    >
      <div
        class="ant-col ant-form-item-label ant-col-xs-24 ant-col-sm-7"
      >
        <label
          class=""
          for="operationCodes"
          title="role.roleForm.operationCodes"
        >
          role.roleForm.operationCodes
        </label>
      </div>
      <div
        class="ant-col ant-form-item-control ant-col-xs-24 ant-col-sm-13"
      >
        <div
          class="ant-form-item-control-input"
        >
          <div
            class="ant-form-item-control-input-content"
          >
            <div
              class="ant-select ant-select-multiple ant-select-show-search"
            >
              <div
                class="ant-select-selector"
              >
                <div
                  class="ant-select-selection-overflow"
                >
                  <div
                    class="ant-select-selection-overflow-item ant-select-selection-overflow-item-suffix"
                    style="opacity: 1;"
                  >
                    <div
                      class="ant-select-selection-search"
                      style="width: 0px;"
                    >
                      <input
                        aria-activedescendant="operationCodes_list_0"
                        aria-autocomplete="list"
                        aria-controls="operationCodes_list"
                        aria-haspopup="listbox"
                        aria-owns="operationCodes_list"
                        autocomplete="off"
                        class="ant-select-selection-search-input"
                        id="operationCodes"
                        readonly=""
                        role="combobox"
                        style="opacity: 0;"
                        type="search"
                        unselectable="on"
                        value=""
                      />
                      <span
                        aria-hidden="true"
                        class="ant-select-selection-search-mirror"
                      >
                        
                         
                      </span>
                    </div>
                  </div>
                </div>
                <span
                  class="ant-select-selection-placeholder"
                >
                  common.form.placeholder.select
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </form>
</div>
`;
